--- a/app/views/courses/calification.html.erb
+++ b/app/views/courses/calification.html.erb
@@ -15,7 +15,7 @@
         <%= render :partial => "course_menu" %>
         <%= render :partial => "members_menu" %>
       </div>
-      <div class="span10">
+      <div class="span10" style="border:0;">
         <h1>Calificaciones del curso</h1>
 		<%= render :partial => "calification/index"%>
       </div>
