--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -134,3 +134,12 @@ height : 350px;
 #chat_title h2{
 	color:#00AFC9;
 }
+#activities_calendar_body{
+             	border : solid 0px #ccc;
+	            background : #fff;
+	            color : #000;
+	            padding : 4px;
+	            width : 510px;
+				height : 300px;
+	            overflow : auto;
+	            text-align: justify;
