subiendo calendario y graficas con estilos

--- a/app/views/home/dashboard.html.erb
+++ b/app/views/home/dashboard.html.erb
@@ -56,7 +56,7 @@
         <%= render :partial => "members" %>
       </div>
       <div class="span-two-thirds">
-	              <%= link_to image_tag("kontact-date.png"),calendar_path, :class => "btn info small  right"%>
+	              <%= link_to image_tag("kontact-date.png"),calendar_path, :class => "btn info small right",:rel => "dashboard-tip", :title => "Ir a mi calendario de actividades"%>
                <div class="row with line">
                 <div class="dashboard-box">
                   <div class="underline padding-top">
