--- a/app/assets/stylesheets/default.css
+++ b/app/assets/stylesheets/default.css
@@ -289,7 +289,7 @@ color: #BFBFBF;
 
 /*.wall label, */
 /*.assignments label,*/
-/*.discussions label {*/
+/*.discussions label */
 /*	display: none;*/
 /*}*/
 
@@ -417,8 +417,7 @@ fieldset.questions .question:hover {
   border: 1px dashed #424242;
   padding: 18px;
   margin-bottom: 3px;
-/*  background-color: #eaeaea;
-*/}
+}
 
 fieldset.questions .question-select { 
   border: 1px solid #049CDB;
