subiendo cambio de form_field

--- a/app/views/students/deliveries/show.html.erb
+++ b/app/views/students/deliveries/show.html.erb
@@ -5,7 +5,7 @@
    </p>   
  </div>
  <div class="modal-body">
-     <%= render :partial => "form_fields"%>
+     <%= render :partial => "calificationems/form"%>
 </div>
 </div>
 
