--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,3 +1,7 @@
+
+<% if mobile? %>
+	<%= render :partial => "shared/mobile" %>
+<% else%>
 <!DOCTYPE html>
 <html>
 <head>
@@ -5,7 +9,6 @@
   <title>Cúrsame</title>
   <%= stylesheet_link_tag    "application" %>
   <%= javascript_include_tag "application" %>
-  <%= stylesheet_link_tag "http://ajax.googleapis.com/ajax/libs/jqueryui/1.7.2/themes/redmond/jquery-ui.css", "application" %>
   
 
 
@@ -45,3 +48,4 @@
   <%= render :partial => 'shared/flash', :locals => {:flash => flash} %>
   <%= yield %>
 </html>
+<% end%>
