--- a/app/views/shared/_topbar.html.erb
+++ b/app/views/shared/_topbar.html.erb
@@ -12,7 +12,7 @@
 
       <ul class="nav secondary-nav">
         <li class="dropdown">
-          <%= link_to "#{current_user.first_name}" + " #{current_user.last_name}", "#", :class => "dropdown-toggle" %>
+          <%= link_to "#{current_user.first_name}" + " #{current_user.last_name}", "#", :class => "dropdown-toggle"%>
           <ul class="dropdown-menu">
             <li><%= link_to t('shared.toolbar.settings'), settings_path %></li>
             <li class="divider"></li>
@@ -24,3 +24,8 @@
     </div>
   </div>
 </div>
+<script type="text/javascript">
+  $(function(){
+	$('.dropdown-toggle').dropdown()
+  });
+</script>
