--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -28,10 +28,10 @@
 #calendar td,
 #calendar th {
   font-family:sans-serif;
-  font-size: 10px;
+  font-size: 15px;
   padding: 6px;
   border-radius: 15px solid;
- 
+  height :20px;
 
 }
 
@@ -49,7 +49,7 @@
   background-color:#fff;
   height: 80px;
   vertical-align: top;
-  font-size: 11px;
+  font-size: 9px;
 
 }
 
