--- a/app/assets/stylesheets/jquery.ui.datepicker.css
+++ b/app/assets/stylesheets/jquery.ui.datepicker.css
@@ -233,15 +233,11 @@
 
 .ui-datepicker-cover {
 	display: none;
-	/*
-
-sorry for IE5*/
+	/*sorry for IE5*/
     display/*
 
 */: block;
-	/
-
-*sorry for IE5*/
+	/*sorry for IE5*/
     position: absolute;
 	
 
