--- a/app/views/comments/_comment_tpl.html.erb
+++ b/app/views/comments/_comment_tpl.html.erb
@@ -5,14 +5,41 @@
       <h6><%= link_to comment.user.name, user_path(comment.user) %></h6>
       <blockquote>
         <p><%= comment.text %></p>
+          
+    	<div class= "like">
+	         <% @cabatina=comment.id%>
+			 <div class="right">
+			  <%comment.like_not_likes.each do |c|%>
+
+			  <% @casiopea = c.user_id %>
+
+			  <%end%> 
+
+			  <% if current_user.id === @casiopea %>
+			  <%= comment.like_not_likes.count %>
+			  <% else %>
+
+			 <div id="like_super">
+			  <%= render :partial => "like_not_likes/form"%>
+			  </div>
+			  <div class="right">
+			<center>
+			  <%= comment.like_not_likes.count %>
+			</center>
+	          </div>
+		    <% end %>
+		</div>
+         
         <% if comment.assets.any? %>
         <p>
         <% comment.assets.each do |asset| %>
           <%= image_tag asset.file.thumb_url %>
 		  <%=  render :partial => 'shared/document_viewer', :locals => { :asset => asset }  %>
-		  <a data-toggle="modal" href="#modal-asset-<%= asset.id %>"><%= asset.name %></a><br />
+		  <a data-toggle="modal" href="#modal-asset-<%= asset.id %>"><%= asset.name %> </a><br />
         <% end %>
         </p>
+             
+           
         <% end %>
         <small>
           <%= time_ago_in_words(comment.created_at) %>
@@ -23,6 +50,7 @@
               <%= link_to t('comment'), '#', :class => "toggle_comment_box" %>
           <% end %>
         </small>
+     
       </blockquote>
     </div>
   </div>
