--- a/app/assets/stylesheets/bootstrap.css
+++ b/app/assets/stylesheets/bootstrap.css
@@ -76,6 +76,13 @@ table {
   border-collapse: collapse;
   border-spacing: 0;
 }
+#calendar th {
+  font-family:sans-serif;
+  font-size: 11px;
+  padding: 6px;
+  border-radius: 15px solid;
+  height: 20px;
+}
 ol, ul {
   list-style: none;
 }
