primeros cambios en diseño de calificación de tareas

--- a/app/assets/stylesheets/default.css
+++ b/app/assets/stylesheets/default.css
@@ -1352,3 +1352,13 @@ display: block;
 .login_texted0{
 	color: #fff;
 }
+
+.calification-bad{       
+       color: #fff !important;
+	   background-color: #FE0606;
+}
+
+.calification-good{       
+       color: #fff !important;
+	   background-color: #09B559;
+}
