--- a/app/views/students/deliveries/show.html.erb
+++ b/app/views/students/deliveries/show.html.erb
@@ -66,7 +66,9 @@
             <% end %>
 			
 			<% if current_user.role == 'teacher' %>
-                 <div class="btn"  data-toggle="modal" href="#myModal">Calificar Tarea</div>
+			     
+                 <div class="btn"  data-toggle="modal" href="#myModal">Calificar Tarea / Editar </div>
+                
             <% end %>
                
          
