--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,9 +1,9 @@
 <footer>
   <div class="container">
     <p>
-    <a href="">Nosotros</a> | 
-    <a href="">Ayuda</a> | 
-    <a href="">Blog</a> | 
+    <%= link_to "Nosotros", nosotros_path %> | 
+    <%= link_to "Ayuda", help_path  %> | 
+    <%= link_to "Blog", blog_path %> | 
     <a href="">M&oacute;vil </a> | 
     <a href="">Privacidad</a> | 
     <%= link_to "Términos", terms_path %> | 
