--- a/app/views/supervisor/shared/_admin_menu.html.erb
+++ b/app/views/supervisor/shared/_admin_menu.html.erb
@@ -1,4 +1,4 @@
-<%= tabs_tag(:builder => MenuTabBuilder, :open_tabs => {:class => "menu"}) do |tab| %>
+†<%= tabs_tag(:builder => MenuTabBuilder, :open_tabs => {:class => "menu"}) do |tab| %>
   <li class="top"><%= t('.admin') %></li>
   <%= tab.dashboard t('.dashboard'), supervisor_dashboard_path %>
   <%= tab.configuration t('.configuration'), edit_supervisor_network_path %>
