cambios en el dropdown

--- a/app/views/shared/_topbar.html.erb
+++ b/app/views/shared/_topbar.html.erb
@@ -55,7 +55,10 @@
 
 alert(5676);
 
+ $(".dropdown-toggle").click(function() {
+  alert("Handler for .click() called.");
+});
   $(function(){
-	$('.dropdown-toggle').dropdown()
+	$(".dropdown-toggle").dropdown()
   });
 </script>
