--- a/app/views/shared/_topbar.html.erb
+++ b/app/views/shared/_topbar.html.erb
@@ -27,7 +27,7 @@
   </div>
 </div>
 <script type="text/javascript">
-!function( $ ){
+/*!function( $ ){
   $.fn.dropdown = function ( selector ) {
 	alert(12312);
     return this.each(function () {
@@ -56,7 +56,7 @@
 
  $(".dropdown-toggle").click(function() {
   alert("Handler for .click() called.");
-});
+});*/
   $(function(){
 	$(".dropdown-toggle").dropdown()
   });
