--- a/app/views/shared/_topbar.html.erb
+++ b/app/views/shared/_topbar.html.erb
@@ -27,9 +27,8 @@
   </div>
 </div>
 <script type="text/javascript">
-/*!function( $ ){
+!function( $ ){
   $.fn.dropdown = function ( selector ) {
-	alert(12312);
     return this.each(function () {
       $(this).delegate(selector || d, 'click', function (e) {
         var li = $(this).parent('li')
@@ -54,9 +53,6 @@
 
 }( window.jQuery || window.ender );
 
- $(".dropdown-toggle").click(function() {
-  alert("Handler for .click() called.");
-});*/
   $(function(){
 	$(".dropdown-toggle").dropdown()
   });
