--- a/app/views/shared/_topbar.html.erb
+++ b/app/views/shared/_topbar.html.erb
@@ -27,7 +27,7 @@
   </div>
 </div>
 <script type="text/javascript">
-!function( $ ){
+/*!function( $ ){
   $.fn.dropdown = function ( selector ) {
     return this.each(function () {
       $(this).delegate(selector || d, 'click', function (e) {
@@ -51,7 +51,7 @@
     $('body').dropdown()
   })
 
-}( window.jQuery || window.ender );
+}( window.jQuery || window.ender );*/
 
   $(function(){
 	$(".dropdown-toggle").dropdown()
