subiendo cambios directos en rutas y stilos para send_reports

--- a/app/views/home/nosotros.html.erb
+++ b/app/views/home/nosotros.html.erb
@@ -16,7 +16,7 @@
 <p>Economista y Programador web</p>
 </div>
 <div class="span2">
-<%= image_tag("nosotros/alfredo.jpg")%>
+<%= image_tag("nosotros/alfredot.png")%>
 </div>
 </div>
 <div class="well span6">
