--- a/app/views/send_reports/_form.html.erb
+++ b/app/views/send_reports/_form.html.erb
@@ -1,7 +1,9 @@
 <div class="container">
+
 	<div class="span14">
 <%= form_for(@send_report=SendReport.new) do |f| %>
-    <div class="span12">
+   
+   <div class="span12">
 	
     <div class="span3 well">
 	 
@@ -37,16 +39,12 @@
     <%= f.hidden_field :event_date, :value => @time %><br /><br />
     <%= f.hidden_field :user_id, :value => current_user.id%>
     <div class="span5 right">
-	<div class="span2" style="margin:5px;">
-   <div class="right"><div class="btn right" onclick="mostrarContacto()"><%=image_tag("reports_admin/mail.png")%></div></div>
-    <div class="right">  
-	</div>
-	</div>
-	<div calss="span2">
+   <!--<div class="btn right" onclick="mostrarContacto()"><%=image_tag("reports_admin/mail.png")%></div></div>-->
      <%= Time.now %>
     </div>
-    </br>
+    </br>     
     <div class="right">
+	 
 	    <%= f.submit "Reportar", :class => "btn success" %><br />
 	 </div>
     </div>
