--- a/app/views/shared/_topbar.html.erb
+++ b/app/views/shared/_topbar.html.erb
@@ -17,8 +17,7 @@
             <li><%= link_to t('shared.toolbar.settings'), settings_path %></li>
             <li><%= link_to t('.soporte y sugerencias'), soporte_path %></li>
             <li class="divider"></li>
-            <li><%= link_to t('.logout'), destroy_user_session_path, :method => :delete %></li>
-           
+            <li><%= link_to t('.logout'), destroy_user_session_path, :method => :delete %></li>           
            </ul>
         </li>
       </ul>
@@ -27,7 +26,7 @@
   </div>
 </div>
 <script type="text/javascript">
-/*!function( $ ){
+!function( $ ){
   $.fn.dropdown = function ( selector ) {
     return this.each(function () {
       $(this).delegate(selector || d, 'click', function (e) {
@@ -51,7 +50,7 @@
     $('body').dropdown()
   })
 
-}( window.jQuery || window.ender );*/
+}( window.jQuery || window.ender );
 
   $(function(){
 	$(".dropdown-toggle").dropdown()
